# face-organizer

./: .gitignore  .pypirc.example  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
face_grouper/: __init__.py  cli.py  clusterer.py  detector.py  frame_extractor.py  organizer.py  run_tracker.py  scanner.py  video_organizer.py  video_scanner.py
